--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,24 @@
 #Database
-DB_USER=
-DB_HOST=
-DB_NAME=
-DB_PORT=
-DB_PASSWORD=
+DB_USER=54323
+DB_HOST=localhost
+DB_NAME=Telegram_parser_svyatoslav
+DB_PORT=5432
+DB_PASSWORD=postgres
 
 #Telgram
 TELEGRAM_TOKEN_API=
-TELEGRAM_ORG_AUTH=
+TELEGRAM_ORG_AUTH=https://my.telegram.org/auth
 
 #Telethon
-TELETHON_SESSION_MESSAGES=
-TELETHON_SESSION_AUDIENCE=
+TELETHON_SESSION_MESSAGES=Session_messages
+TELETHON_SESSION_AUDIENCE=Session_audience
+
 
 #Setting
-DEFAULT_PASSWORD=
+DEFAULT_PASSWORD=Admin
 
 #Key
-ENCRYPTION_KEY=
+ENCRYPTION_KEY=XGHv8MhErHob3X_m-iMpEGzFVAiCS1X1zC_2Q__EZs4=
 
 #RabbitMQ
 RB_HOST=
