--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,23 @@
 #Database
-DB_USER=54323
-DB_HOST=localhost
-DB_NAME=Telegram_parser_svyatoslav
-DB_PORT=5432
-DB_PASSWORD=postgres
+DB_USER=
+DB_HOST=
+DB_NAME=
+DB_PORT=
+DB_PASSWORD=
 
 #Telgram
 TELEGRAM_TOKEN_API=
-TELEGRAM_ORG_AUTH=https://my.telegram.org/auth
+TELEGRAM_ORG_AUTH=
 
 #Telethon
-TELETHON_SESSION_MESSAGES=Session_messages
-TELETHON_SESSION_AUDIENCE=Session_audience
-
+TELETHON_SESSION_MESSAGES=
+TELETHON_SESSION_AUDIENCE=
 
 #Setting
-DEFAULT_PASSWORD=Admin
+DEFAULT_PASSWORD=
 
 #Key
-ENCRYPTION_KEY=XGHv8MhErHob3X_m-iMpEGzFVAiCS1X1zC_2Q__EZs4=
+ENCRYPTION_KEY=
 
 #RabbitMQ
 RB_HOST=
